--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,68 +13,55 @@
   "categories": ["food", "lifestyle", "shopping"],
   "icons": [
     {
-      "src": "/icons/icon-72x72.png",
+      "src": "/icons/android/android-launchericon-72-72.png",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-96x96.png",
+      "src": "/icons/android/android-launchericon-96-96.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-128x128.png",
+      "src": "/icons/ios/128.png",
       "sizes": "128x128",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-144x144.png",
+      "src": "/icons/android/android-launchericon-144-144.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-152x152.png",
+      "src": "/icons/ios/152.png",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/android/android-launchericon-192-192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-384x384.png",
+      "src": "/icons/ios/512.png",
       "sizes": "384x384",
       "type": "image/png",
       "purpose": "maskable any"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/android/android-launchericon-512-512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable any"
     }
   ],
-  "screenshots": [
-    {
-      "src": "/screenshots/home.png",
-      "sizes": "540x720",
-      "type": "image/png",
-      "form_factor": "narrow"
-    },
-    {
-      "src": "/screenshots/menu.png",
-      "sizes": "540x720",
-      "type": "image/png",
-      "form_factor": "narrow"
-    }
-  ],
+  "screenshots": [],
   "shortcuts": [
     {
       "name": "Ver Menú",
@@ -83,7 +70,7 @@
       "url": "/menu",
       "icons": [
         {
-          "src": "/icons/shortcut-menu.png",
+          "src": "/icons/android/android-launchericon-96-96.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -96,7 +83,7 @@
       "url": "/pedidos",
       "icons": [
         {
-          "src": "/icons/shortcut-orders.png",
+          "src": "/icons/android/android-launchericon-96-96.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -107,7 +94,3 @@
   "prefer_related_applications": false,
   "gcm_sender_id": "103953800507"
 }
-
-
-
-
